--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,6 +4,6 @@ spring.datasource.url=jdbc:mysql://uf63wl4z2daq9dbb.chr7pe7iynqr.eu-west-1.rds.a
 spring.datasource.username=y5z07etsihoj8mbj
 spring.datasource.password=l6t16waoejfqwzre
 
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 
 
